testsuite/tests/parser/should_fail/ListTuplePunsFail1.script
:set -XNoListTuplePuns
:load ListTuplePunsFail1
